tests/isa/x86/expression_fixups/negative/fixed_imm16_overflow.asm
origin(0x10000)
x86.use64()

entry:
    add ax, target
target:
    ret
